@@ -408,6 +408,9 @@ name|Exception
 block|{
 specifier|final
 name|ObjectSelect
+argument_list|<
+name|ClientMtTable1
+argument_list|>
 name|objectSelect
 init|=
 name|ObjectSelect
@@ -572,6 +575,9 @@ name|Exception
 block|{
 specifier|final
 name|ObjectSelect
+argument_list|<
+name|ClientMtTable1
+argument_list|>
 name|objectSelect
 init|=
 name|ObjectSelect
@@ -690,6 +696,9 @@ name|Exception
 block|{
 specifier|final
 name|ObjectSelect
+argument_list|<
+name|ClientMtTable1
+argument_list|>
 name|objectSelect
 init|=
 name|ObjectSelect
@@ -804,6 +813,56 @@ argument_list|(
 literal|1
 argument_list|,
 name|count
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testCAY_2094
+parameter_list|()
+block|{
+name|ClientMtTable1
+name|clientMtTable1
+init|=
+name|SelectById
+operator|.
+name|query
+argument_list|(
+name|ClientMtTable1
+operator|.
+name|class
+argument_list|,
+literal|1
+argument_list|)
+operator|.
+name|selectOne
+argument_list|(
+name|context
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|clientMtTable1
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|clientMtTable1
+operator|.
+name|getObjectId
+argument_list|()
+operator|.
+name|getIdSnapshot
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|"TABLE1_ID"
+argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
