@@ -1539,6 +1539,87 @@ return|return
 name|result
 return|;
 block|}
+comment|/**      *<p>      * Looks in the DataMap's that this object was created with for the      * ObjEntity that maps to the services the specified class, with option to      * fallback to search by name with client resolver in case entity not found.      *</p>      *<p>      * This method can be used where entity class can be received from client.      *</p>      *      * @param entityClass entity class to search      * @param lookupClientResolver flag to fallback to client resolver      * @return the required ObjEntity or null if there is none that matches the      *         specifier      *      * @since 4.0      */
+specifier|public
+name|ObjEntity
+name|getObjEntity
+parameter_list|(
+name|Class
+argument_list|<
+name|?
+argument_list|>
+name|entityClass
+parameter_list|,
+name|boolean
+name|lookupClientResolver
+parameter_list|)
+block|{
+name|ObjEntity
+name|entity
+init|=
+name|getObjEntity
+argument_list|(
+name|entityClass
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|entity
+operator|!=
+literal|null
+operator|||
+operator|!
+name|lookupClientResolver
+condition|)
+block|{
+return|return
+name|entity
+return|;
+block|}
+name|EntityResolver
+name|clientResolver
+init|=
+name|getClientEntityResolver
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|clientResolver
+operator|!=
+name|this
+condition|)
+block|{
+name|ObjEntity
+name|clientEntity
+init|=
+name|clientResolver
+operator|.
+name|getObjEntity
+argument_list|(
+name|entityClass
+argument_list|)
+decl_stmt|;
+name|entity
+operator|=
+name|clientEntity
+operator|==
+literal|null
+condition|?
+literal|null
+else|:
+name|getObjEntity
+argument_list|(
+name|clientEntity
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|entity
+return|;
+block|}
 comment|/**      * @deprecated since 4.0, use {@link #getObjEntity(Class)}.      */
 specifier|public
 name|ObjEntity
