@@ -494,71 +494,10 @@ name|?
 argument_list|>
 operator|)
 name|root
+argument_list|,
+literal|true
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
-name|entity
-operator|==
-literal|null
-condition|)
-block|{
-comment|// entity not found, try to resolve it
-comment|// with
-comment|// client resolver
-name|EntityResolver
-name|clientResolver
-init|=
-name|resolver
-operator|.
-name|getClientEntityResolver
-argument_list|()
-decl_stmt|;
-if|if
-condition|(
-name|clientResolver
-operator|!=
-name|resolver
-condition|)
-block|{
-name|ObjEntity
-name|clientEntity
-init|=
-name|clientResolver
-operator|.
-name|getObjEntity
-argument_list|(
-operator|(
-name|Class
-argument_list|<
-name|?
-argument_list|>
-operator|)
-name|root
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|clientEntity
-operator|!=
-literal|null
-condition|)
-block|{
-name|entity
-operator|=
-name|resolver
-operator|.
-name|getObjEntity
-argument_list|(
-name|clientEntity
-operator|.
-name|getName
-argument_list|()
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-block|}
 if|if
 condition|(
 name|entity
